Fix bootstrap navbar on mobile devices

--- a/ocl_web/static/css/project.css
+++ b/ocl_web/static/css/project.css
@@ -359,3 +359,11 @@ a.resource-label:hover {
 .strikethrough {
   text-decoration: line-through
 }
+
+.navbar-toggle {
+  background-color: #fff;
+}
+
+.navbar-toggle .icon-bar {
+  background-color: #777;
+}
